--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,14 @@
         <tfoot>
         </tfoot>
     </table>
-    <script src="js/index.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
+    <script>
+        var n1 = new Negociacao;
+        n1.valor = 10;
+        console.log(n1);
+        var n2 = new Negociacao;
+        n2.valor = 11;
+        console.log(n2);
+    </script>
 </body>
 </html>
