--- a/client/index.html
+++ b/client/index.html
@@ -60,12 +60,11 @@
     </table>
     <script src="js/app/models/Negociacao.js"></script>
     <script>
-        var n1 = new Negociacao;
-        n1.valor = 10;
-        console.log(n1);
-        var n2 = new Negociacao;
-        n2.valor = 11;
-        console.log(n2);
+        var n1 = new Negociacao(new Date(), 5, 700);
+        console.log(n1.getData());
+        console.log(n1.getQuantidade());
+        console.log(n1.getValor());
+        console.log(n1.getVolume());
     </script>
 </body>
 </html>
