--- a/client/index.html
+++ b/client/index.html
@@ -60,7 +60,7 @@
     </table>
     <script src="js/app/models/Negociacao.js"></script>
     <script>
-        var n1 = new Negociacao(new Date(), 5, 700);
+        let n1 = new Negociacao(new Date(), 5, 700);
         
         console.log(n1.data);
         console.log(n1.quantidade);
