--- a/client/aprendendo_indexeddb.html
+++ b/client/aprendendo_indexeddb.html
@@ -9,19 +9,23 @@
 </head>
 
 <body>
-
+    <script src="js/app/models/Negociacao.js"></script>
     <script>
 
         var connection;
 
-        var openRequest = window.indexedDB.open('aluraframe', 2);
+        var openRequest = window.indexedDB.open('aluraframe', 3);
 
         openRequest.onupgradeneeded = e => {
 
             console.log('Cria ou altera um banco já existente');
 
             var minhaConnection = e.target.result;
-            minhaConnection.createObjectStore('negociacoes');
+
+            if (minhaConnection.objectStoreNames.contains('negociacoes')) {
+                minhaConnection.deleteObjectStore('negociacoes');
+            }
+            minhaConnection.createObjectStore('negociacoes', { autoIncrement: true });
         };
 
         openRequest.onsuccess = e => {
@@ -34,6 +38,27 @@
 
             console.log(e.target.error);
         };
+
+        function adiciona() {
+
+            let transaction = connection.transaction(['negociacoes'], 'readwrite');
+
+            let store = transaction.objectStore('negociacoes');
+
+            let negociacao = new Negociacao(new Date(), 200, 1);
+
+            let request = store.add(negociacao);
+
+            request.onsuccess = e => {
+
+                console.log('Negociação incluída com sucesso');
+            };
+
+            request.onerror = e => {
+
+                console.log('Não foi possível incluir a negociação');
+            };
+        }
     </script>
 </body>
 
