--- a/client/index.html
+++ b/client/index.html
@@ -48,22 +48,12 @@
 
     <div id="negociacaoView"></div>
 
-    <script src="js/app/models/Negociacao.js"></script>
-    <script src="js/app/controllers/NegociacaoController.js"></script>
-    <script src="js/app/helpers/DateHelper.js"></script>
-    <script src="js/app/models/ListaNegociacoes.js"></script>
-    <script src="js/app/views/View.js"></script>
-    <script src="js/app/views/NegociacaoView.js"></script>
-    <script src="js/app/models/Mensagem.js"></script>
-    <script src="js/app/views/MensagemView.js"></script>
-    <script src="js/app/services/ProxyFactory.js"></script>
-    <script src="js/app/helpers/Bind.js"></script>
-    <script src="js/app/services/NegociacaoService.js"></script>
-    <script src="js/app/services/HttpService.js"></script>
-    <script src="js/app/services/ConnectionFactory.js"></script>
-    <script src="js/app/dao/NegociacaoDao.js"></script>
+    <script src="node_modules/systemjs/dist/system.js"></script>
     <script>
-        let negociacaoController = new NegociacaoController();
+        System.defaultJSExtensions = true;
+        System.import('js/app/boot').catch(function(err){
+            console.error(err);
+        });
     </script>
 </body>
 
